# control_totals

./: .gitignore  .nojekyll  README.md  index.html  pyproject.toml  search.json
.github/workflows/: publish-validation.yml
control_totals/: scratch.ipynb
control_totals/r_scripts/: .gitignore  base_year_data_2023_for_CT.rda  parcels_capacity.R  regionalCTs.R  run_creating_control_totals_from_targets.R  split_ct_to_hct.R  subregionalCTs.R
control_totals/steps/: adjust_targets_to_base_year.py  calculate_units_for_dashboard.py  create_control_totals_rebased_targets.py  create_controls.py  emp_chg_targets_no_res_con.py  emp_chg_targets_res_con.py  extrapolate_to_controls_year.py  king_cnty_targets.py  load_split_hct_base_data.py  output_to_mysql.py  parcels_capacity.py  regionalCTs.py  render_validation_dashboard.py  split_ct_to_hct.py  split_unincorporated_kitsap_housing_targets.py  subregionalCTs.py  total_pop_chg_targets.py  units_chg_targets.py
control_totals/util/: __init__.py  census_helpers.py  ct_allocation.py  db_helpers.py  pipeline.py
control_totals/validation/: README.md  _build_notebooks.py  _quarto.yml  config.yaml  index.qmd
examples/legacy_luvit/: qc.ipynb  scratch.ipynb  wiki.md
examples/legacy_no_R/: qc.ipynb  scratch.ipynb
examples/summer_2026/: scratch.ipynb  validation.ipynb  wiki.md
summary_scripts/: consistency_checks.html  employment.html  household_population.html  household_size.html  households.html  households_compare_2050.html  households_compare_2060.html  housing_units.html  population.html  region.html  vacancy_rate.html
(+69 files in other folders)
